force-app/main/default/objects/Insurance_policy__c/Insurance_policy__c.object-meta.xml
<CustomObject>
    <label>Insurance policy</label>
    <nameField>
        <displayFormat>IPN-{0000}</displayFormat>
        <label>Insurance policy Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Insurance policies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>