force-app/main/default/objects/Insurance_policy__c/fields/Agent__c.field-meta.xml
<CustomField>
    <fullName>Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agent</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Insurance policies (Agent)</relationshipLabel>
    <relationshipName>Insurance_policies1</relationshipName>
    <type>Lookup</type>
</CustomField>