force-app/main/default/objects/Insurance_policy__c/fields/Policy_Duration__c.field-meta.xml
<CustomField>
    <fullName>Policy_Duration__c</fullName>
    <formula>End_Date__c  -  Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Policy Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>