force-app/main/default/objects/Insurance_policy__c/fields/Policy_Number__c.field-meta.xml
<CustomField>
    <fullName>Policy_Number__c</fullName>
    <displayFormat>INS-{00000}</displayFormat>
    <label>Policy Number</label>
    <type>AutoNumber</type>
</CustomField>