force-app/main/default/objects/Insurance_policy__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Insurance_policies</relationshipName>
    <type>Lookup</type>
</CustomField>