force-app/main/default/objects/Insurance_policy__c/validationRules/Premium_Must_Be_Positive.validationRule-meta.xml
<ValidationRule>
    <fullName>Premium_Must_Be_Positive</fullName>
    <active>true</active>
    <errorConditionFormula>Premium_Amount__c &lt;=0</errorConditionFormula>
    <errorMessage>Premium Amount must be greater than 0.</errorMessage>
</ValidationRule>